<resources>
    <string name="app_name">Student-Faculty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signin">SignIn</string>
</resources>