<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/cornflowerableblue"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/username"
                    android:textColorHint="@color/white"
                    android:textColor="@color/design_default_color_background" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/cornflowerableblue"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvUsername">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColorHint="@color/white"
                    android:hint="@string/password"
                    android:textColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="81dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/cvUsername"
                app:layout_constraintEnd_toEndOf="@+id/cvUsername"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="@+id/cvUsername"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/password"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintBottom_toTopOf="@+id/cvPassword"
                app:layout_constraintEnd_toEndOf="@+id/cvPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cvPassword"
                app:layout_constraintTop_toBottomOf="@+id/cvUsername" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_bg"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login"
                android:textColor="@color/cornflowerableblue"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:id="@+id/signText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/signup"
                android:textColor="@color/design_default_color_background"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="227dp"
                android:text="@string/remember_me"
                android:checked="false"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvPassword" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="152dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/signin"
                app:layout_constraintBottom_toTopOf="@+id/cvUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>